--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
  "port": "Your_server_port_here",
  "name": "Your_bot_name_here",
  "auto-night-skip": "false",
- "token": "Your_discord_bot_token_here",
- "channelid": "Your_discord_server_channel_id_here",
- "loginmsg": "Your_Login_message_here"
+ "token": "OTEyODA3NDIxMzIyMzQyNDcx.YZ1UKA.hHMu6G_VQUmpBv4XLxObKp_PjiE",
+ "channelid": "912810030267531304",
+ "loginmsg": "hello how are u"
 }
